# zverhealth

./: .gitignore  Makefile  cat.txt  config.py  manage.py  package copy.json  package-lock.json  package.json  pyproject.toml  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
cat/: admin.py  forms.py  models.py  urls.py  views.py
cat/migrations/: 0001_initial.py  0002_feedback.py  0003_delete_feedback.py  0004_alter_catimage_image.py  0005_alter_catimage_image.py  0006_catimage_name_catimage_profession.py
cat/templates/: confirm.html  gallery.html
cat_sber/: asgi.py  settings.py  urls.py  wsgi.py
src/: index.html
src/favicon/: site.webmanifest
src/js/: index.js  main.js
src/scss/: layout.scss  mixins.scss  styles.css  styles.css.map  styles.scss
templates/: index.html
