[tool.poetry]
name = "cat-sber"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.2"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
drf-spectacular = "^0.27.2"
djangorestframework = "^3.15.2"
django-webpack-loader = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
